<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddProductFragment"
    android:background="@color/soft_green">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_product"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerProduct"
        style="@style/Base.Theme.LocalMarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/switchPesoUnidad"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:switchPadding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itStockLayout" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnAcept"
        app:layout_constraintEnd_toStartOf="@+id/btnAcept"
        app:layout_constraintTop_toTopOf="@+id/btnAcept"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAcept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/listo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/tvUnidadMedida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="left"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchPesoUnidad"
        app:layout_constraintStart_toEndOf="@+id/switchPesoUnidad"
        app:layout_constraintTop_toTopOf="@+id/switchPesoUnidad"
        app:layout_constraintVertical_bias="0.541" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itPriceLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="248dp"

        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProduct">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itStockLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="251dp"

        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itPriceLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_stock"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPesoUnidad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUnidadMedida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="left"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/itStockLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itStockLayout"
        app:layout_constraintTop_toTopOf="@+id/itStockLayout"
        app:layout_constraintVertical_bias="0.527" />

    <TextView
        android:id="@+id/tvPriceCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:gravity="left"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/itPriceLayout"
        app:layout_constraintStart_toEndOf="@+id/itPriceLayout"
        app:layout_constraintTop_toTopOf="@+id/itPriceLayout"
        app:layout_constraintVertical_bias="0.488" />

</androidx.constraintlayout.widget.ConstraintLayout>