...
    <string name="app_name">Local Market</string>

    <!-- switch -->
    <string name="switch_vendedor">¿Registrarse como vendedor?     </string>

    <!-- buttons -->
    <string name="login">Login</string>
    <string name="sing_up">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="username">Nombre de usuario</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar cuenta</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="listo">Listo</string>
    <string name="cancel">Cancelar</string>
    <string name="volver">Volver</string>

    <!-- hints -->
    <string name="insert_email_hint">Correo electrónico</string>
    <string name="hint_pwd">Contraseña</string>
...
